--- a/Mock/edit.html
+++ b/Mock/edit.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>メニュー</title>
+        <title>編集</title>
         <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="./css/style.css" />
+        <script src="./lib/jquery/dist/jquery.min.js"></script>
+        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./lib/js.cookie.min.js"></script>
     </head>
-    <body class="theme_background">
+    <body class="theme_background" onload="displayMessage();">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom mb-3 p-0 theme">
                 <div class="container">
@@ -76,8 +79,6 @@
                 &copy; 2020 - Diary_Sample - Privacy
             </div>
         </footer>
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 <!-- Modal -->
   <div class="modal fade" id="updModal" tabindex="-1" role="dialog" aria-labelledby="updModalLabel" aria-hidden="true">
@@ -87,8 +88,8 @@
           <h5 class="modal-title" id="updModalLabel">更新します。よろしいですか？</h5>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn theme_positive" onclick="window.location.href = './diary.html';">はい</button>
-            <button type="button" class="btn theme_cancel" data-dismiss="modal">いいえ</button>
+            <button class="btn theme_positive" onclick="Cookies.set('msg', '更新が完了しました。');window.location.href = './diary.html';">はい</button>
+            <button class="btn theme_cancel" data-dismiss="modal">いいえ</button>
         </div>
       </div>
     </div>
@@ -100,8 +101,8 @@
           <h5 class="modal-title" id="delModalLabel">削除します。よろしいですか？</h5>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn theme_warning" onclick="window.location.href = './menu.html';">はい</button>
-            <button type="button" class="btn theme_cancel" data-dismiss="modal">いいえ</button>
+            <button class="btn theme_warning" onclick="Cookies.set('msg', '削除が完了しました。');window.location.href = './menu.html';">はい</button>
+            <button class="btn theme_cancel" data-dismiss="modal">いいえ</button>
         </div>
       </div>
     </div>
