--- a/Mock/menu.html
+++ b/Mock/menu.html
@@ -5,8 +5,31 @@
         <title>メニュー</title>
         <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="./css/style.css" />
+        <script src="./lib/jquery/dist/jquery.min.js"></script>
+        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./lib/js.cookie.min.js"></script>
+        <script>
+            function displayMessage() {
+                if (Cookies.get('msg') != null) {
+                    $('#message').show();
+                    $('#toast_message').text(Cookies.get('msg'));
+                    if(Cookies.get('msg') == '削除が完了しました。') {
+                      $('#toast-header').addClass('theme_warning');
+                      $('#toast-header').removeClass('bg-warning');
+                    } else {
+                      $('#toast-header').addClass('bg-warning');
+                      $('#toast-header').removeClass('theme_warning');
+                    }
+                    $('#message').toast('show');
+                    Cookies.remove('msg');
+                } else {
+                    $('#message').hide();
+                    $('#message').toast('hide');
+                }
+            }
+        </script>
     </head>
-    <body onload="$('#message').toast('hide');">
+    <body onload="displayMessage();">
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom mb-3 p-0 theme">
                 <div class="container">
@@ -31,6 +54,19 @@
                 </div>
             </nav>
         </header>
+        <!-- toast -->
+        <div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
+            <div id="toast-header" class="toast-header bg-warning">
+            <strong class="mr-auto">Notification</strong>
+            <small>just now</small>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="toast-body">
+                <span id="toast_message"></span>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-8">
@@ -90,25 +126,10 @@
         </div>
         <br/>
         <br/>
-        <!-- toast -->
-        <div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-            <strong class="mr-auto">Notification</strong>
-            <small class="text-muted">just now</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="toast-body">
-            登録完了しました。
-            </div>
-        </div>
         <footer class="border-top footer theme">
             <div class="container" align="center">
                 &copy; 2020 - Diary_Sample - Privacy
             </div>
         </footer>
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
