--- a/Mock/forgot_password.html
+++ b/Mock/forgot_password.html
@@ -37,38 +37,18 @@
             <main role="main" class="pb-3">
                 <h1>Register</h1>
 
+                <h4>Enter your email.</h4>
+                <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <form method="post" action="register_confirmation.html">
-                            <h4>Create a new account.</h4>
-                            <hr />
+                        <form method="post" action="forgot_password_confirmation.html">
                             <div class="text-danger"></div>
                             <div class="form-group">
                                 <label>Email</label>
-                                <input type="Email" class="form-control" />
+                                <input type="email" class="form-control" />
                             </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label>Confirm password</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <button type="submit" class="btn btn-primary">Register</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
-                    </div>
-                    <div class="col-md-6 col-md-offset-2">
-                        <section>
-                            <h4>Use another service to register.</h4>
-                            <hr />
-                                <div>
-                                    <p>
-                                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                        for details on setting up this ASP.NET application to support logging in via external services.
-                                    </p>
-                                </div>
-                        </section>
                     </div>
                 </div>
             </main>
