--- a/Mock/login.html
+++ b/Mock/login.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="form-group">
                                     <p>
-                                        <a id="forgot-password" href="./ForgotPassword">Forgot your password?</a>
+                                        <a id="forgot-password" href="forgot_password.html">Forgot your password?</a>
                                     </p>
                                     <p>
                                         <a href="./Register">Register as a new user</a>
