--- a/Mock/register_confirmation.html
+++ b/Mock/register_confirmation.html
@@ -35,42 +35,11 @@
         </header>
         <div class="container">
             <main role="main" class="pb-3">
-                <h1>Register</h1>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <form method="post" action="register_confirmation.html">
-                            <h4>Create a new account.</h4>
-                            <hr />
-                            <div class="text-danger"></div>
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input type="Email" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label>Confirm password</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <button type="submit" class="btn btn-primary">Register</button>
-                        </form>
-                    </div>
-                    <div class="col-md-6 col-md-offset-2">
-                        <section>
-                            <h4>Use another service to register.</h4>
-                            <hr />
-                                <div>
-                                    <p>
-                                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                        for details on setting up this ASP.NET application to support logging in via external services.
-                                    </p>
-                                </div>
-                        </section>
-                    </div>
-                </div>
+                <h1>Register confirmation</h1>
+                    <p>
+                        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+                        Normally this would be emailed: <a id="confirm-link" href="confirm_email.html">Click here to confirm your account</a>
+                    </p>
             </main>
         </div>
         <footer class="border-top footer theme">
