ログアウト追加

--- a/Mock/register_confirmation.html
+++ b/Mock/register_confirmation.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -36,10 +36,10 @@
         <div class="container">
             <main role="main" class="pb-3">
                 <h1>Register confirmation</h1>
-                    <p>
-                        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-                        Normally this would be emailed: <a id="confirm-link" href="confirm_email.html">Click here to confirm your account</a>
-                    </p>
+                <p>
+                    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+                    Normally this would be emailed: <a id="confirm-link" href="./confirm_email.html">Click here to confirm your account</a>
+                </p>
             </main>
         </div>
         <footer class="border-top footer theme">
