--- a/Mock/confirm_email.html
+++ b/Mock/confirm_email.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
