--- a/Mock/edit.html
+++ b/Mock/edit.html
@@ -18,7 +18,7 @@
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a href="./menu.html" class="nav-link text-light">Home</a>
@@ -28,6 +28,11 @@
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-light">設定</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./login.html">Logout</a>
                             </li>
                         </ul>
                     </div>
