--- a/Mock/forgot_password.html
+++ b/Mock/forgot_password.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -41,7 +41,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <form method="post" action="forgot_password_confirmation.html">
+                        <form method="post" action="./forgot_password_confirmation.html">
                             <div class="text-danger"></div>
                             <div class="form-group">
                                 <label>Email</label>
