--- a/Mock/forgot_password_confirmation.html
+++ b/Mock/forgot_password_confirmation.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -36,7 +36,6 @@
         <div class="container">
             <main role="main" class="pb-3">
                 <h1>Forgot password confirmation</h1>
-
                 <p>
                     Please check your email to reset your password.
                 </p>
