--- a/Mock/login.html
+++ b/Mock/login.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <section>
-                            <form id="account" method="post" action="menu.html">
+                            <form id="account" method="post" action="./menu.html">
                                 <h4>Use a local account to log in.</h4>
                                 <hr />
                                 <div class="text-danger"></div>
