--- a/Mock/register.html
+++ b/Mock/register.html
@@ -23,10 +23,10 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="register.html">Register</a>
+                                <a class="nav-link text-light" href="./register.html">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="login.html">Login</a>
+                                <a class="nav-link text-light" href="./login.html">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -39,7 +39,7 @@
 
                 <div class="row">
                     <div class="col-md-4">
-                        <form method="post" action="register_confirmation.html">
+                        <form method="post" action="./register_confirmation.html">
                             <h4>Create a new account.</h4>
                             <hr />
                             <div class="text-danger"></div>
@@ -62,12 +62,12 @@
                         <section>
                             <h4>Use another service to register.</h4>
                             <hr />
-                                <div>
-                                    <p>
-                                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                        for details on setting up this ASP.NET application to support logging in via external services.
-                                    </p>
-                                </div>
+                            <div>
+                                <p>
+                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                </p>
+                            </div>
                         </section>
                     </div>
                 </div>
