管理画面を追加

--- a/Mock/confirm_email.html
+++ b/Mock/confirm_email.html
@@ -37,7 +37,9 @@
             <main class="pb-3">
                 <h3><img src="lib/bootstrap-icons/person-plus-fill.svg" alt="" width="32" height="32" title="ACCOUNT"> REGISTER ACCOUNT COMPLETED!</h3>
                 <br>
-                <h6>アカウントの登録が完了しました。</ｈ>
+                <h6>
+                    アカウントの登録が完了しました。ログインは<a href="./Login.html" class="certification_link">こちら</a>をクリックしてください。
+                </h6>
             </main>
         </div>
         <footer class="border-top footer certification_theme">
