--- a/Mock/forgot_password_confirmation.html
+++ b/Mock/forgot_password_confirmation.html
@@ -39,7 +39,7 @@
                 <br>
                 <h6>
                     パスワードリセット用のメールを送信しました。<br>ご確認ください。<br><br>
-                    ※これはモックなのでメールは送信しません。代わりにこちらの<a href="./reset_password.html" class="certificate_link">リンク</a>をクリックしてください。
+                    ※これはモックなのでメールは送信しません。代わりにこちらの<a href="./reset_password.html" class="certification_link">リンク</a>をクリックしてください。
                 </h6>
             </main>
         </div>
