--- a/Mock/reset_password_confirmation.html
+++ b/Mock/reset_password_confirmation.html
@@ -38,7 +38,7 @@
                 <h3><img src="lib/bootstrap-icons/key-fill.svg" alt="" width="32" height="32" title="PASSWORD"> RESET YOUR PASSWORD COMPLETED!</h3>
                 <br>
                 <h6>
-                    パスワードが変更されました。ログインは<a href="./Login.html" class="certificate_link">こちら</a>をクリックしてください。
+                    パスワードが変更されました。ログインは<a href="./Login.html" class="certification_link">こちら</a>をクリックしてください。
                 </h6>
             </main>
         </div>
