--- a/Mock/edit.html
+++ b/Mock/edit.html
@@ -27,7 +27,10 @@
                                 <a href="#" class="nav-link text-light">プロフィール</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link text-light">設定</a>
+                                <a href="./settings_profile.html" class="nav-link user_email">test@example.jp</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./manage_account.html" class="nav-link text-light">管理</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
