--- a/Mock/login.html
+++ b/Mock/login.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="form-group">
                                     <p>
-                                        <a href="forgot_password.html" class="certificate_link">パスワードをお忘れですか？</a>
+                                        <a href="forgot_password.html" class="certification_link">パスワードをお忘れですか？</a>
                                     </p>
                                 </div>
                             </form>
