--- a/Mock/menu.html
+++ b/Mock/menu.html
@@ -49,10 +49,13 @@
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-light">設定</a>
                             </li>
+                            <li class="nav-item">
+                                <a href="./manage_account.html" class="nav-link text-light">管理</a>
+                            </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="#" class="nav-link user_email">test@example.jp</a>
+                                <a href="./settings_profile.html" class="nav-link user_email">test@example.jp</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./login.html">ログアウト</a>
