--- a/Mock/register_confirmation.html
+++ b/Mock/register_confirmation.html
@@ -39,7 +39,7 @@
                 <br>
                 <h6>
                     まだアカウントは登録完了していません。メールを送信しましたので、メールのリンクをクリックしてアカウントを有効にしてください。<br><br>
-                    ※これはモックなのでメールは送信しません。代わりにこちらの<a href="./confirm_email.html" class="certificate_link">リンク</a>をクリックしてください。
+                    ※これはモックなのでメールは送信しません。代わりにこちらの<a href="./confirm_email.html" class="certification_link">リンク</a>をクリックしてください。
                 </h6>
             </main>
         </div>
