全体的にブラッシュアップ、フォルダに分ける

--- a/Mock/account_settings/settings_password.html
+++ b/Mock/account_settings/settings_password.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>アカウント設定</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/account_setttings.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a href="./menu.html" class="nav-link text-light">Home</a>
+                                <a href="./../menu.html" class="nav-link text-light">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-light">プロフィール</a>
@@ -30,7 +30,7 @@
                                 <a href="#" class="nav-link text-light">設定</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./manage_account.html" class="nav-link text-light">管理</a>
+                                <a href="./../manage/manage_account.html" class="nav-link text-light">管理</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
@@ -38,7 +38,7 @@
                                 <a href="./settings_profile.html" class="nav-link user_email">test@example.jp</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./login.html">ログアウト</a>
+                                <a class="nav-link text-light" href="./../certificate/login.html">ログアウト</a>
                             </li>
                         </ul>
                     </div>
@@ -46,36 +46,36 @@
             </nav>
         </header>
         <div class="container">
-            <h2>Manage your account</h2>
-
+            <h3><img src="./../lib/bootstrap-icons/person-circle.svg" alt="" width="32" height="32" title="account"> アカウント設定</h3>
             <div>
-                <h4>Change your account settings</h4>
                 <hr />
                 <div class="row">
                     <div class="col-md-3">
                         <ul class="nav nav-pills flex-column">
-                            <li class="nav-item"><a class="nav-link" id="profile" href="./settings_profile.html">Profile</a></li>
-                            <li class="nav-item"><a class="nav-link" id="email" href="./settings_email.html">Email</a></li>
-                            <li class="nav-item"><a class="nav-link" id="change-password" href="./settings_password.html">Password</a></li>
-                            <li class="nav-item"><a class="nav-link active" id="personal-data" href="./settings_personal_data.html">Personal data</a></li>
+                            <li class="nav-item"><a class="nav-link" id="profile" href="./settings_profile.html">プロフィール</a></li>
+                            <li class="nav-item"><a class="nav-link" id="email" href="./settings_email.html">Eメール</a></li>
+                            <li class="nav-item"><a class="nav-link theme" id="change-password" href="./settings_password.html">パスワード</a></li>
+                            <li class="nav-item"><a class="nav-link" id="personal-data" href="./settings_personal_data.html">アカウントデータ</a></li>
                         </ul>
                     </div>
                     <div class="col-md-9">
-                        <h4>Personal Data</h4>
                         <div class="row">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-                                    <p>
-                                        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
-                                    </p>
-                                    <form id="download-data" method="post" class="form-group" action="download_personal_data.html">
-                                        <button class="btn btn-primary" type="submit">Download</button>
-                                    </form>
-                                    <p>
-                                        <a id="delete" href="./delete_personal_data.html" class="btn btn-primary">Delete</a>
-                                    </p>
-                                </div>
+                            <div class="col-md-6">
+                                <form id="change-password-form" method="post">
+                                    <div class="form-group">
+                                        <label">現在のパスワード</label>
+                                        <input type="password" class="form-control" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label">変更後のパスワード</label>
+                                        <input type="password" class="form-control" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label">変更後のパスワード（再入力）</label>
+                                        <input type="password" class="form-control" />
+                                    </div>
+                                    <button type="submit" class="btn btn-sm theme">変更</button>
+                                </form>
                             </div>
                         </div>
                     </div>
