--- a/Mock/certificate/login.html
+++ b/Mock/certificate/login.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ログイン</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/certificate.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -35,12 +35,12 @@
         </header>
         <div class="container">
             <main class="pb-3">
-                <h3><img src="lib/bootstrap-icons/person-check-fill.svg" alt="" width="32" height="32" title="LOGIN"> LOGIN</h3>
+                <h3><img src="./../lib/bootstrap-icons/person-check-fill.svg" alt="" width="32" height="32" title="LOGIN"> LOGIN</h3>
                 <br>
                 <div class="row">
                     <div class="col-md-4">
                         <section>
-                            <form id="account" method="post" action="./menu.html">
+                            <form id="account" method="post" action="./../menu.html">
                                 <h6>アカウント情報を入力してください</h6>
                                 <hr />
                                 <div class="text-danger"></div>
