--- a/Mock/diary.html
+++ b/Mock/diary.html
@@ -43,7 +43,7 @@
                                 <a href="#" class="nav-link text-light">設定</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./manage_account.html" class="nav-link text-light">管理</a>
+                                <a href="./manage/manage_account.html" class="nav-link text-light">管理</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
@@ -51,7 +51,7 @@
                                 <a href="./settings_profile.html" class="nav-link user_email">test@example.jp</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./login.html">ログアウト</a>
+                                <a class="nav-link text-light" href="./certificate/login.html">ログアウト</a>
                             </li>
                         </ul>
                     </div>
