--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Diary Sample Mock Site</h1>
-        <a href="./Mock/login.html">モックサイトへ</a>
+        <a href="./Mock/certificate/login.html">モックサイトへ</a>
     </body>
 </html>
