--- a/Mock/account_settings/settings_email.html
+++ b/Mock/account_settings/settings_email.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>アカウント設定</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/account_setttings.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a href="./menu.html" class="nav-link text-light">Home</a>
+                                <a href="./../menu.html" class="nav-link text-light">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link text-light">プロフィール</a>
@@ -30,7 +30,7 @@
                                 <a href="#" class="nav-link text-light">設定</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./manage_account.html" class="nav-link text-light">管理</a>
+                                <a href="./../manage/manage_account.html" class="nav-link text-light">管理</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
@@ -38,7 +38,7 @@
                                 <a href="./settings_profile.html" class="nav-link user_email">test@example.jp</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./login.html">ログアウト</a>
+                                <a class="nav-link text-light" href="./../certificate/login.html">ログアウト</a>
                             </li>
                         </ul>
                     </div>
@@ -46,41 +46,41 @@
             </nav>
         </header>
         <div class="container">
-            <h2>Manage your account</h2>
-
+            <h3><img src="./../lib/bootstrap-icons/person-circle.svg" alt="" width="32" height="32" title="account"> アカウント設定</h3>
             <div>
-                <h4>Change your account settings</h4>
                 <hr />
                 <div class="row">
                     <div class="col-md-3">
                         <ul class="nav nav-pills flex-column">
-                            <li class="nav-item"><a class="nav-link" id="profile" href="./settings_profile.html">Profile</a></li>
-                            <li class="nav-item"><a class="nav-link active" id="email" href="./settings_email.html">Email</a></li>
-                            <li class="nav-item"><a class="nav-link" id="change-password" href="./settings_password.html">Password</a></li>
-                            <li class="nav-item"><a class="nav-link" id="personal-data" href="./settings_personal_data.html">Personal data</a></li>
+                            <li class="nav-item"><a class="nav-link" id="profile" href="./settings_profile.html">プロフィール</a></li>
+                            <li class="nav-item"><a class="nav-link theme" id="email" href="./settings_email.html">Eメール</a></li>
+                            <li class="nav-item"><a class="nav-link" id="change-password" href="./settings_password.html">パスワード</a></li>
+                            <li class="nav-item"><a class="nav-link" id="personal-data" href="./settings_personal_data.html">アカウントデータ</a></li>
                         </ul>
                     </div>
                     <div class="col-md-9">
-                        <h4>Manage Email</h4>
-                        <partial name="_StatusMessage" model="Model.StatusMessage" />
                         <div class="row">
                             <div class="col-md-6">
                                 <form id="email-form" method="post">
                                     <div class="form-group">
-                                        <label>Email</label>
+                                        <label><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill icon-color" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+                                          </svg> Eメールアドレス</label>
                                         <div class="input-group">
-                                            <input type="email" class="form-control" readonly />
+                                            <input type="email" class="form-control theme" value="test@exsample.jp" readonly />
                                             <div class="input-group-append">
                                                 <span class="input-group-text text-success font-weight-bold">✓</span>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label>NewEmail</label>
+                                        <label><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-open-fill icon-color" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M8.941.435a2 2 0 0 0-1.882 0l-6 3.2A2 2 0 0 0 0 5.4v.313l6.709 3.933L8 8.928l1.291.717L16 5.715V5.4a2 2 0 0 0-1.059-1.765l-6-3.2zM16 6.873l-5.693 3.337L16 13.372v-6.5zm-.059 7.611L8 10.072.059 14.484A2 2 0 0 0 2 16h12a2 2 0 0 0 1.941-1.516zM0 13.373l5.693-3.163L0 6.873v6.5z"/>
+                                          </svg> 変更後のEメールアドレス</label>
                                         <input type="email" class="form-control" />
                                         <span class="text-danger"></span>
                                     </div>
-                                    <button id="change-email-button" type="submit" class="btn btn-primary">Change email</button>
+                                    <button id="change-email-button" type="submit" class="btn btn-sm theme">変更</button>
                                 </form>
                             </div>
                         </div>
