--- a/Mock/certificate/forgot_password_confirmation.html
+++ b/Mock/certificate/forgot_password_confirmation.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>アカウント登録</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/certificate.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <partial name="_LoginPartial" />
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul class="navbar-nav flex-grow-3">
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./register.html">アカウント登録</a>
                             </li>
@@ -35,30 +35,12 @@
         </header>
         <div class="container">
             <main class="pb-3">
-                <h3><img src="lib/bootstrap-icons/person-plus-fill.svg" alt="" width="32" height="32" title="ACCOUNT"> ACCOUNT REGISTER</h3>
+                <h3><img src="./../lib/bootstrap-icons/key-fill.svg" alt="" width="32" height="32" title="PASSWORD"> PLEASE CHECK YOUR EMAIL TO RESET YOUR PASSWORD</h3>
                 <br>
-                <div class="row">
-                    <div class="col-md-4">
-                        <form method="post" action="./register_confirmation.html">
-                            <h6>新規にアカウントを登録します</h6>
-                            <hr />
-                            <div class="text-danger"></div>
-                            <div class="form-group">
-                                <label>Eメール</label>
-                                <input type="Email" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label>パスワード</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label>パスワード（再入力）</label>
-                                <input type="password" class="form-control" />
-                            </div>
-                            <button type="submit" class="btn certification_theme">登録</button>
-                        </form>
-                    </div>
-                </div>
+                <h6>
+                    パスワードリセット用のメールを送信しました。<br>ご確認ください。<br><br>
+                    ※これはモックなのでメールは送信しません。代わりにこちらの<a href="./reset_password.html" class="certification_link">リンク</a>をクリックしてください。
+                </h6>
             </main>
         </div>
         <footer class="border-top footer certification_theme">
