--- a/Mock/certificate/register_confirmation.html
+++ b/Mock/certificate/register_confirmation.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>アカウント登録</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/certificate.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -35,7 +35,7 @@
         </header>
         <div class="container">
             <main class="pb-3">
-                <h3><img src="lib/bootstrap-icons/person-plus-fill.svg" alt="" width="32" height="32" title="ACCOUNT"> PLEASE CHECK YOUR EMAIL TO CONFIRM YOUR ACCOUNT</h3>
+                <h3><img src="./../lib/bootstrap-icons/person-plus-fill.svg" alt="" width="32" height="32" title="ACCOUNT"> PLEASE CHECK YOUR EMAIL TO CONFIRM YOUR ACCOUNT</h3>
                 <br>
                 <h6>
                     まだアカウントは登録完了していません。メールを送信しましたので、メールのリンクをクリックしてアカウントを有効にしてください。<br><br>
