--- a/Mock/certificate/reset_password.html
+++ b/Mock/certificate/reset_password.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>パスワードリセット</title>
-        <link rel="stylesheet" href="./lib/bootstrap/dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <script src="./lib/jquery/dist/jquery.min.js"></script>
-        <script src="./lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./lib/js.cookie.min.js"></script>
+        <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./../css/certificate.css" />
+        <script src="./../lib/jquery/dist/jquery.min.js"></script>
+        <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./../lib/js.cookie.min.js"></script>
     </head>
     <body>
         <header>
@@ -35,11 +35,30 @@
         </header>
         <div class="container">
             <main class="pb-3">
-                <h3><img src="lib/bootstrap-icons/key-fill.svg" alt="" width="32" height="32" title="PASSWORD"> RESET YOUR PASSWORD COMPLETED!</h3>
+                <h3><img src="./../lib/bootstrap-icons/key-fill.svg" alt="" width="32" height="32" title="PASSWORD"> RESET YOUR PASSWORD</h3>
                 <br>
-                <h6>
-                    パスワードが変更されました。ログインは<a href="./Login.html" class="certification_link">こちら</a>をクリックしてください。
-                </h6>
+                <h6>新しいパスワードを入力してください</h6>
+                <hr />
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post" action="./reset_password_confirmation.html">
+                            <div class="text-danger"></div>
+                            <div class="form-group">
+                                <label>Eメール</label>
+                                <input type="email" class="form-control certification_theme" value="sample@example.jp" readonly />
+                            </div>
+                            <div class="form-group">
+                                <label>パスワード</label>
+                                <input type="password" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                                <label>パスワード（再入力）</label>
+                                <input type="password" class="form-control" />
+                            </div>
+                            <button type="submit" class="btn certification_theme">リセット</button>
+                        </form>
+                    </div>
+                </div>
             </main>
         </div>
         <footer class="border-top footer certification_theme">
