レビュー指摘修正：不要なリンク削除・アカウント登録を削除

--- a/Mock/certificate/forgot_password.html
+++ b/Mock/certificate/forgot_password.html
@@ -23,10 +23,7 @@
                         <partial name="_LoginPartial" />
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="./register.html">アカウント登録</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" href="./login.html">ログイン</a>
+                                <a class="nav-link text-light" href="./login.html">ログインへ戻る</a>
                             </li>
                         </ul>
                     </div>
