--- a/Mock/manage/manage_account.html
+++ b/Mock/manage/manage_account.html
@@ -46,14 +46,14 @@
             </nav>
         </header>
         <div class="container">
-            <h3><img src="./../lib/bootstrap-icons/gear.svg" alt="" width="32" height="32" title="management"> 管理</h3>
+            <h3><img src="./../lib/bootstrap-icons/gear.svg" alt="" width="32" height="32" title="management">管理</h3>
             <div>
                 <h4></h4>
                 <hr />
                 <div class="row">
                     <div class="col-md-3">
                         <ul class="nav nav-pills flex-column">
-                            <li class="nav-item"><a class="nav-link manage_theme" id="profile" href="./manage_account.html">アカウント管理</a></li>
+                            <li class="nav-item"><a class="nav-link manage_theme" id="manage_account" href="./manage_account.html">アカウント管理</a></li>
                         </ul>
                     </div>
                     <div class="col-md-9">
