GithubPagesでのリンク切れを修正

--- a/Mock/account_settings/confirm_deleting_personal_data.html
+++ b/Mock/account_settings/confirm_deleting_personal_data.html
@@ -69,12 +69,12 @@
                             </p>
                         </div>
                         <div>
-                            <form id="delete-user" method="post" class="form-group" action="./../certificate/login.html">
+                            <form id="delete-user" class="form-group">
                                     <div class="form-group">
                                         <label>パスワード</label>
                                         <input type="password" class="form-control" />
                                     </div>
-                                <button class="btn btn-danger" type="submit">アカウントを削除する</button>
+                                <button class="btn btn-danger" type="button" onclick="window.location.href = './../certificate/login.html';">アカウントを削除する</button>
                             </form>
                         </div>
                     </div>
