--- a/Mock/account_settings/settings_personal_data.html
+++ b/Mock/account_settings/settings_personal_data.html
@@ -74,7 +74,7 @@
                         <p>
                             <strong>データを削除するとアカウントは完全に削除され、復元することはできません。</strong>
                         </p>
-                        <form id="download-data" method="post" class="form-group">
+                        <form id="download-data" class="form-group">
                             <button class="btn btn-sm theme" type="file" onclick="download();">ダウンロード</button>
                         </form>
                         <p>
