--- a/Mock/certificate/forgot_password.html
+++ b/Mock/certificate/forgot_password.html
@@ -38,13 +38,13 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <form method="post" action="./forgot_password_confirmation.html">
+                        <form>
                             <div class="text-danger"></div>
                             <div class="form-group">
                                 <label>Eメール</label>
                                 <input type="email" class="form-control" />
                             </div>
-                            <button type="submit" class="btn certification_theme">送信</button>
+                            <button type="button" class="btn certification_theme" onclick="window.location.href = './forgot_password_confirmation.html';">送信</button>
                         </form>
                     </div>
                 </div>
