--- a/Mock/account_settings/settings_email.html
+++ b/Mock/account_settings/settings_email.html
@@ -61,7 +61,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-6">
-                                <form id="email-form" method="post">
+                                <form id="email-form">
                                     <div class="form-group">
                                         <label><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill icon-color" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
@@ -80,7 +80,7 @@
                                         <input type="email" class="form-control" />
                                         <span class="text-danger"></span>
                                     </div>
-                                    <button id="change-email-button" type="submit" class="btn btn-sm theme">変更</button>
+                                    <button id="change-email-button" type="button" class="btn btn-sm theme">変更</button>
                                 </form>
                             </div>
                         </div>
