--- a/Mock/account_settings/settings_password.html
+++ b/Mock/account_settings/settings_password.html
@@ -61,7 +61,7 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-6">
-                                <form id="change-password-form" method="post">
+                                <form id="change-password-form">
                                     <div class="form-group">
                                         <label">現在のパスワード</label>
                                         <input type="password" class="form-control" />
@@ -74,7 +74,7 @@
                                         <label">変更後のパスワード（再入力）</label>
                                         <input type="password" class="form-control" />
                                     </div>
-                                    <button type="submit" class="btn btn-sm theme">変更</button>
+                                    <button type="button" class="btn btn-sm theme">変更</button>
                                 </form>
                             </div>
                         </div>
