--- a/Mock/account_settings/settings_profile.html
+++ b/Mock/account_settings/settings_profile.html
@@ -62,7 +62,7 @@
                         <partial name="_StatusMessage" model="Model.StatusMessage" />
                         <div class="row">
                             <div class="col-md-6">
-                                <form id="profile-form" method="post">
+                                <form id="profile-form">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-group">
                                         <label>ユーザID</label>
@@ -83,7 +83,7 @@
                                         <input type="tel" class="form-control" value="03-1234-5678" />
                                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                                     </div>
-                                    <button id="update-profile-button" type="submit" class="btn btn-sm theme">保存</button>
+                                    <button id="update-profile-button" type="button" class="btn btn-sm theme">保存</button>
                                 </form>
                             </div>
                         </div>
