--- a/Mock/certificate/login.html
+++ b/Mock/certificate/login.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <section>
-                            <form id="account" method="post" action="./../menu.html">
+                            <form id="account">
                                 <h6>アカウント情報を入力してください</h6>
                                 <hr />
                                 <div class="text-danger"></div>
@@ -47,7 +47,7 @@
                                 </div>
                                 <br>
                                 <div class="form-group">
-                                    <button type="submit" class="btn certification_theme">ログイン</button>
+                                    <button type="button" class="btn certification_theme" onclick="window.location.href = './../menu.html';">ログイン</button>
                                 </div>
                                 <div class="form-group">
                                     <p>
