--- a/Mock/certificate/reset_password.html
+++ b/Mock/certificate/reset_password.html
@@ -30,7 +30,7 @@
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <form method="post" action="./reset_password_confirmation.html">
+                        <form>
                             <div class="text-danger"></div>
                             <div class="form-group">
                                 <label>Eメール</label>
@@ -44,7 +44,7 @@
                                 <label>パスワード（再入力）</label>
                                 <input type="password" class="form-control" />
                             </div>
-                            <button type="submit" class="btn certification_theme">リセット</button>
+                            <button type="button" class="btn certification_theme" onclick="window.location.href = './reset_password_confirmation.html';">リセット</button>
                         </form>
                     </div>
                 </div>
